Style: Changed the brand's text and font-weight

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </head>
 <body>
      <header>
-        <div class="brand">Muzy's</div>
+        <div class="brand">Muzy</div>
         <div class="hamburger-icon d-md-none" title="Click to open or close the menu">
             <input type="checkbox" id="hamburger-icon-control">
             <div class="slash"></div>
