--- a/index-pt.html
+++ b/index-pt.html
@@ -36,7 +36,7 @@
 </head>
 <body>
      <header>
-        <div class="brand">Muzy's</div>
+        <div class="brand">Muzy</div>
         <div class="hamburger-icon d-md-none" title="Clique para abrir ou fechar o menu">
             <input type="checkbox" id="hamburger-icon-control">
             <div class="slash"></div>
