--- a/index.html
+++ b/index.html
@@ -18,12 +18,16 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <script>
+        // This code detects the user's preferred language based on the browser settings and loads the appropriate page accordingly.
+
+         // The language verification is performed only once during the session to avoid unnecessary redirects.
         if (!sessionStorage.getItem('wasLanguageVerified')) {
             sessionStorage.setItem('wasLanguageVerified', 'true')
             changePage()
         }
         function changePage() {
             const userLanguage = navigator.language || navigator.userLanguage
+            // If the language starts with 'pt', it indicates Portuguese, so the page 'index-pt.html', with the Portuguese content, will be loaded.
             if (userLanguage.startsWith('pt')) {
                 window.location.href = 'index-pt.html'
             }
