Refactor: Remove unused images and rename some image files

--- a/index-pt.html
+++ b/index-pt.html
@@ -79,7 +79,7 @@
                     <a href="img/curriculum/curriculo-portugues-gh.pdf" download="curriculo.pdf"><button class="download-cv-btn" id="download-cv" title="Baixar currículo">Baixar CV</button></a>
                     <a href="https://www.linkedin.com/in/jhefferson-muzy-039389247/" target="_blank">
                         <button class="linkedin-btn" id="linkedin-home" title="Abrir linkedin">
-                            <img src="img/Layer 2.svg">
+                            <img src="img/linkedin-icon.svg">
                             <span class="linkedin-brand">Linkedin</span>
                         </button>
                     </a>
@@ -93,7 +93,7 @@
      <section id="about" class="main-element container-fluid bg-light-purple">
         <div class="row">
             <div class="col-6 m-auto d-xs-none white-background">
-                <img src="img/undraw_programming_re_kg9v.svg" alt="Imagem de um homem programando" class="img-fluid">
+                <img src="img/programming.svg" alt="Imagem de um homem programando" class="img-fluid">
             </div>
             <div class="about-me-text col-md-6">
                 <h2 class="title-about-me">Sobre mim</h2>
@@ -292,23 +292,23 @@
     <section class="container-fluid bg-dark-purple main-element" id="contact">
         <div class="row">
             <div class="contact-section-img col-6 m-auto d-xs-none white-background">
-                <img src="img/profile-pictures (1).svg" alt="Um homem ao lado de um telefonre grande com a sua rede social aberta." class="img-fluid">
+                <img src="img/profile-pictures.svg" alt="Um homem ao lado de um telefonre grande com a sua rede social aberta." class="img-fluid">
             </div>
             <div class="contact-text col-md-6 order-md-first">
                 <h2>Contate-me</h2>
                 <p class="paragraph-contact">Se você estiver interessado em me contratar para um projeto ou para trabalhar em sua empresa, sinta-se à vontade para usar os botões abaixo para se conectar comigo nas redes sociais. Clique uma vez no botão para ser redirecionado para a minha página nas redes sociais, duas vezes para copiar meu nome ou número de telefone.</p>        
                 <span class="contact-link-buttons m-auto">
                     <button class="btn btn-social-media social-media-linkedin" title="Clique uma vez para abrir Linkedin, duas para copiar o nome" id="linkedin">
-                        <img src="img/Layer 2.svg">
+                        <img src="img/linkedin-icon.svg">
                         <span>LinkedIn</span>
                     </button>
                     <button class="btn btn-social-media social-media-github" title="Clique uma vez para abrir Github, duas para copiar o nome" id="github">
                         <div class="white-board-github"></div>
-                        <img src="img/github-142-svgrepo-com.svg" class="img-github">
+                        <img src="img/github-icon.svg" class="img-github">
                         <span >Github</span>
                     </button>
                     <button class="btn btn-social-media social-media-whatsapp" title="Clique uma vez para abrir Whatsapp, duas para copiar o número" id="whatsapp">  
-                        <img src="img/whatsapp-svgrepo-com.svg">
+                        <img src="img/whatsapp-icon.svg">
                         <span>Whatsapp</span>
                     </button>
                 </span>
