--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <a href="img/curriculum/curriculum-english-gh.pdf" download="curriculum.pdf"><button class="download-cv-btn" id="download-cv" title="Download curriculum">Download CV</button></a>
                     <a href="https://www.linkedin.com/in/jhefferson-muzy-039389247/" target="_blank">
                         <button class="linkedin-btn" id="linkedin-home" title="Open LinkedIn">
-                            <img src="img/Layer 2.svg">
+                            <img src="img/linkedin-icon.svg">
                             <span class="linkedin-brand">Linkedin</span>
                         </button>
                     </a>
@@ -91,7 +91,7 @@
      <section id="about" class="main-element container-fluid bg-light-purple">
         <div class="row">
             <div class="col-6 m-auto d-xs-none white-background">
-                <img src="img/undraw_programming_re_kg9v.svg" alt="An image of a man programming" class="img-fluid">
+                <img src="img/programming.svg" alt="An image of a man programming" class="img-fluid">
             </div>
             <div class="about-me-text col-md-6">
                 <h2 class="title-about-me">About Me</h2>
@@ -290,23 +290,23 @@
     <section class="container-fluid bg-dark-purple main-element" id="contact">
         <div class="row">
             <div class="contact-section-img col-6 m-auto d-xs-none white-background">
-                <img src="img/profile-pictures (1).svg" alt="A man beside a large phone with his social media's profile open" class="img-fluid">
+                <img src="img/profile-pictures.svg" alt="A man beside a large phone with his social media's profile open" class="img-fluid">
             </div>
             <div class="contact-text col-md-6 order-md-first">
                 <h2>Get in Touch</h2>
                 <p class="paragraph-contact">If you are interested in hiring me for a project or to work on your company, feel free to use the buttons below to connect with me on social media. Click once on the button to be redirected to my social media page, twice to copy my name or phone number.</p>
                 <span class="contact-link-buttons m-auto">
                     <button class="btn btn-social-media social-media-linkedin" title="Click once to open Linkedin, twice to copy name" id="linkedin">
-                        <img src="img/Layer 2.svg">
+                        <img src="img/linkedin-icon.svg">
                         <span>Linkedin</span>
                     </button>
                     <button class="btn btn-social-media social-media-github" title="Click once to open Github, twice to copy name" id="github">
                         <div class="white-board-github"></div>
-                        <img src="img/github-142-svgrepo-com.svg" class="img-github">
+                        <img src="img/github-icon.svg" class="img-github">
                         <span >Github</span>
                     </button>
                     <button class="btn btn-social-media social-media-whatsapp" title="Click once to open Whatsapp, twice to copy number" id="whatsapp">  
-                        <img src="img/whatsapp-svgrepo-com.svg">
+                        <img src="img/whatsapp-icon.svg">
                         <span>Whatsapp</span>
                     </button>
                 </span>
