Add: Added a new item to the carousel

--- a/index-pt.html
+++ b/index-pt.html
@@ -269,6 +269,7 @@
                         <img src="img/Macbook_odyssey.png" alt="Mockup de um MacBook que mostra o site de Exposição à Odisseia." class="swiper-slide img-fluid">
                         <img src="img/Macbook_web_store.png" alt="Mockup de um MacBook que mostra o site da minha primeira loja virtual." class="swiper-slide img-fluid">
                         <img src="img/Macbook_to-do_list.png" alt="Mockup de um MacBook que mostra o site da lista de tarefas." class="swiper-slide img-fluid">
+                        <img src="img/Macbook_findCoach.png" alt="Mockup de um MacBook que mostra um site de busca de coach." class="swiper-slide img-fluid">
                     </div>
                     <div class="swiper-pagination"></div>
                     <i class="swiper-button-prev bi bi-chevron-left" title="Anterior"></i>
