--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
                         <img src="img/Macbook_odyssey.png" alt="MacBook's mockup that shows the Exposure to Odyssey's site" class="swiper-slide img-fluid">
                         <img src="img/Macbook_web_store.png" alt="MacBook's mockup that shows the first web store that I've made." class="swiper-slide img-fluid">
                         <img src="img/Macbook_to-do_list.png" alt="MacBook's mockup that shows the to-do list" class="swiper-slide img-fluid">
+                        <img src="img/Macbook_findCoach.png" alt="MacBook's mockup that shows the find a coach website" class="swiper-slide img-fluid">
                     </div>
                     <div class="swiper-pagination"></div>
                     <i class="swiper-button-prev bi bi-chevron-left" title="Previous"></i>
